--- a/public/index.firebase.html
+++ b/public/index.firebase.html
@@ -46,6 +46,7 @@
       <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
+    <div id="root"></div>
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
