--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yardshapers</title>
-</head>
-<body>
-  <div id="root"></div>
-  <script>console.log("I think it worked!")</script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Yardshapers</title>
+
+    <div id="root"></div>
+
+  </body>
 </html>
